Bug fix for IE overlap

--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ hr{
     color: #2f6384; text-align: center; margin-top: 8px; width: 380px; margin: auto; margin-top: 20px; margin-bottom: 0px;
 }
 .wfa-wetlandHoverText{
-	font-weight: normal; margin-bottom: 10px; width: 285px; text-align: center; margin: auto; margin-top: 20px; margin-bottom: 0px;
+	font-weight: normal; margin-bottom: 10px; width: 285px; text-align: center; margin: auto; margin-top: 20px; margin-bottom: 0px; position: relative;
 }
 .wfa-sum-wrap {
     width: 350px; margin: 3px; border: 1pt solid #cdd5d5; padding: 5px; box-shadow: 0 1px 1px rgba(16,22,26,.2); position: relative; display: flex;
